Sends end-of-stream signal to output channel

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-nbproject/Makefile-*.mk
-nbproject/private
-nbproject/Package-*.bash
-nbproject/Makefile-*.mk
-nbproject/private
-nbproject/Package-*.bash
-*/nbproject/Makefile-*.mk
-*/nbproject/private
-*/nbproject/Package-*.bash
 dist/
 build/
-.dep.inc
+.idea/
 
