--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-nbproject/Makefile-*.mk
-nbproject/Package-*.bash
-nbproject/private
 dist/
 build/
 package/
-.dep.inc
+.idea/
+src/autoCorrelator.egg-info/
+__pycache__/
