--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@
     - source /root/karabo/activate
     - pushd $CI_PROJECT_DIR
     - karabo -g https://$XFEL_TOKEN@git.xfel.eu/gitlab install $REL_PROJECT_NAME $REL_TAG
-    - pip install --upgrade .
+    - pip install -e .
     - nosetests .
   only:
     - branches
@@ -26,7 +26,15 @@ test:ubuntu18:
   image: europeanxfel/karabo-ci:ubuntu-18
   <<: *test_build
 
+test:ubuntu20:
+  image: europeanxfel/karabo-ci:ubuntu-20
+  <<: *test_build
+
 test:centos7:
-  image: europeanxfel/karabo-ci:centos-7
+  image: europeanxfel/karabo-ci:centos-7gcc7
+  <<: *test_build
+
+test:centos8:
+  image: europeanxfel/karabo-ci:centos-8
   <<: *test_build
 
