--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@
     - export REL_OS_VERS_LONG=$(lsb_release -rs | sed -r "s/^([0-9]+).*/\1/")
     - export REL_PROJECT_NAME=$CI_PROJECT_NAME
     - export REL_TAG=$CI_BUILD_REF_NAME
-    - export KARABO_TAG="latest_build"
     - curl http://exflserv05.desy.de/karabo/karaboFramework/tags/$KARABO_TAG/karabo-$KARABO_TAG-Release-$REL_OS_NAME-$REL_OS_VERS_LONG-x86_64.sh > karabo.sh
     - bash karabo.sh --prefix=/root
     - source /root/karabo/activate
@@ -18,15 +17,27 @@
     - master
 
 ##### Test build #####
-test:ubuntu16:
-  image: europeanxfel/karabo-ci:ubuntu-16
+test:ubuntu20:
+  image: europeanxfel/karabo-ci:ubuntu-20
+  before_script:
+    - export KARABO_TAG="latest_build"
   <<: *test_build
 
-test:ubuntu18:
-  image: europeanxfel/karabo-ci:ubuntu-18
+test:ubuntu20_prerelease:
+  image: europeanxfel/karabo-ci:ubuntu-20
+  before_script:
+    - export KARABO_TAG="latest_prerelease_build"
   <<: *test_build
 
 test:centos7:
   image: europeanxfel/karabo-ci:centos-7
+  before_script:
+    - export KARABO_TAG="latest_build"
+  <<: *test_build
+
+test:centos7_prerelease:
+  image: europeanxfel/karabo-ci:centos-7
+  before_script:
+    - export KARABO_TAG="latest_prerelease_build"
   <<: *test_build
 
