--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,3 +29,7 @@ test:ubuntu20:
 test:centos7:
   image: europeanxfel/karabo-ci:centos-7gcc7
   <<: *test_build
+
+test:almalinux8:
+  image: europeanxfel/karabo-ci:almalinux-8
+  <<: *test_build
