--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,16 +18,16 @@
     - master
 
 ##### Test build #####
-test:ubuntu18:
-  image: europeanxfel/karabo-ci:ubuntu-18
-  <<: *test_build
-
 test:ubuntu20:
   image: europeanxfel/karabo-ci:ubuntu-20
   <<: *test_build
 
+test:ubuntu22:
+  image: europeanxfel/karabo-ci:ubuntu-22
+  <<: *test_build
+
 test:centos7:
-  image: europeanxfel/karabo-ci:centos-7gcc7
+  image: europeanxfel/karabo-ci:centos-7
   <<: *test_build
 
 test:almalinux8:
