--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,8 @@
 [settings]
-known_first_party=image_processing,imageProcessor
+combine_as_imports=True
+include_trailing_comma=False
+# 4 - Hanging Grid, standard
+multi_line_output=4
+line_length=79
+known_first_party=karabo,image_processing,imageProcessor,processing_utils
+src_paths=src
