--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,3 +2,7 @@ include:
   - project: karabo/gitlabci
     file: .python-ci.yml
     ref: main
+    ref: main
+  - project: karabo/gitlabci
+    file: .mirror-device.yml
+    ref: main
